@@ -13,7 +13,7 @@ Bug-Ubuntu: https://bugs.launchpad.net/ubuntu/+source/ipython/+bug/241535
 
 --- a/IPython/core/interactiveshell.py
 +++ b/IPython/core/interactiveshell.py
-@@ -128,7 +128,7 @@ def get_default_colors():
+@@ -124,7 +124,7 @@
      elif os.name=='nt':
          return 'Linux'
      else:
